--- a/cxglobal.html
+++ b/cxglobal.html
@@ -47,21 +47,12 @@ function main() {
 
   toggleSwitch.addEventListener('change', switchTheme, false);
 
+  const currentTheme = localStorage.getItem('theme') ? localStorage.getItem('theme') : null;
+  if (currentTheme) {
+    document.documentElement.setAttribute('data-theme', currentTheme);
 
-  if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
-    document.documentElement.setAttribute('data-theme', "dark");
-    toggleSwitch.checked = true;
-  } else if (window.matchMedia && window.matchMedia('(prefers-color-scheme: light)').matches) {
-    document.documentElement.setAttribute('data-theme', "light");
-    toggleSwitch.checked = false;
-  } else {
-    const currentTheme = localStorage.getItem('theme') ? localStorage.getItem('theme') : null;
-    if (currentTheme) {
-      document.documentElement.setAttribute('data-theme', currentTheme);
-
-      if (currentTheme === 'dark') {
-        toggleSwitch.checked = true;
-      }
+    if (currentTheme === 'dark') {
+      toggleSwitch.checked = true;
     }
   }
 }
@@ -296,6 +287,8 @@ function main() {
     title="rndStr(n: int = 20): string"><wbr />rnd<wbr />Str<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#createRandomDataFile%2Cstring"
     title="createRandomDataFile(filename: string = &quot;randomdata.dat&quot;)"><wbr />create<wbr />Random<wbr />Data<wbr />File<span class="attachedType"></span></a></li>
+  <li><a class="reference" href="#utf8info%2Cstring"
+    title="utf8info(s: string): string"><wbr />utf8info<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#cxBinomialCoeff%2Cint%2Cint"
     title="cxBinomialCoeff(n, k: int): int"><wbr />cx<wbr />Binomial<wbr />Coeff<span class="attachedType"></span></a></li>
   <li><a class="reference" href="#createSeqAll%2Cint%2Cint"
@@ -506,7 +499,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2020-05-27
+Latest      : 2020-09-26
 
 Compiler    : latest stable or devel branch
 
@@ -1526,6 +1519,16 @@ showCpuCores
 <span class="Identifier">echo</span> <span class="Identifier">bc</span></pre>
 
 </dd>
+<a id="utf8info,string"></a>
+<dt><pre><span class="Keyword">proc</span> <a href="#utf8info%2Cstring"><span class="Identifier">utf8info</span></a><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+
+<p>utf8info</p>
+<p>returns hex and int code for each char in string in a vertical list</p>
+<pre class="listing"><span class="Identifier">echo</span> <span class="Identifier">utf8info</span><span class="Punctuation">(</span><span class="StringLit">&quot;すべての数字はどこですか？&quot;</span><span class="Punctuation">)</span>
+<span class="Identifier">echo</span> <span class="Identifier">utf8info</span><span class="Punctuation">(</span><span class="StringLit">&quot;我们希望情况会尽快好转。&quot;</span><span class="Punctuation">)</span></pre>
+
+</dd>
 <a id="cxBinomialCoeff,int,int"></a>
 <dt><pre><span class="Keyword">proc</span> <a href="#cxBinomialCoeff%2Cint%2Cint"><span class="Identifier">cxBinomialCoeff</span></a><span class="Other">(</span><span class="Identifier">n</span><span class="Other">,</span> <span class="Identifier">k</span><span class="Other">:</span> <span class="Identifier">int</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
@@ -2361,7 +2364,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small style="color: var(--hint);">Made with Nim. Generated: 2020-06-10 09:27:41 UTC</small>
+        <small style="color: var(--hint);">Made with Nim. Generated: 2020-09-26 17:36:27 UTC</small>
       </div>
     </div>
   </div>
